# inputset-generator

./: .env.example  .gitignore  README.md  cli.py  click_custom.py  commit_map.py  generate.py  inputset.py  produce_inputset.py  pypi.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: bento.yml
file_handlers/: __init__.py  _base.py  csv.py  json.py
file_types/: __init__.py  _base.py  csv.py  json.py
functions/: __init__.py  head.py  sample.py  sort.py
inputset-generator/: cli.py  util.py  visualizations.py
inputset-generator/apis/: __init__.py  _api.py  github.py  npm.py  pypi.py  tmp
inputset-generator/file_handlers/: __init__.py  _base.py  csv.py  json.py
inputset-generator/file_loaders/: __init__.py  _base.py  csv.py  json.py
inputset-generator/functions/: __init__.py  head.py  sample.py  sort.py  trim.py  truncate.py
inputset-generator/loaders/: __init__.py  _loader.py  weblist.py
inputset-generator/registries/: __init__.py  _base.py  _registry.py  github.py  npm.py  pypi.py
inputset-generator/structures/: __init__.py  dataset.py
inputset_generator/: cli.py  util.py
inputset_generator/apis/: __init__.py  _api.py  github.py  npm.py  pypi.py
inputset_generator/functions/: sample.py  sort.py  trim.py
inputset_generator/structures/: dataset.py
r2c_isg/: cli.py  dataset.py  session.py  util.py
r2c_isg/apis/: __init__.py  _api.py  core.py  github.py  npm.py  pypi.py
r2c_isg/functions/: __init__.py  sample.py  sort.py  trim.py
r2c_isg/loaders/: __init__.py  _loader.py  core.py  dataset_loader.py  r2c_loader.py
r2c_isg/structures/: README.md  __init__.py  core.py  dataset.py  generic.py  github.py  (+2 more)
registries/: __init__.py  _base.py  abstract.py  github.py  npm.py  pypi.py
structures/: __init__.py  _base.py  dataset.py  project.py  version.py
testfiles/: git_repo.json  git_urls.csv  http_url.json  pypi_names.csv
tests/: test_loaders.py
(+86 files in other folders)
