[tool.poetry]
name = "r2c-inputset-generator"
version = "0.3.2"
description = "An input set generator for R2C"
readme = "README.md"
homepage = "r2c.dev"
license = "Proprietary"
authors = ["Return To Corporation <hello@r2c.dev>", "Ben Fulton <fulton.benjamin@gmail.com>"]
exclude = ["tests*"]
packages = [
  { include = "r2c_isg" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
structures = "^0.9.5"
click = "^7.1.1"
click_shell = "^2.0"
requests = "^2.23.0"
dill = "^0.3.1"
tqdm = "^4.43.0"
urllib3 = "^1.25.8"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]
coverage = "~=4.5.4"
pytest = "~=3.9"
mypy = "~=0.670"
black = "==18.9b0"

[tool.poetry.scripts]
r2c-isg = "r2c_isg.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
